--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "bluetooth-data-tools>=1.2.0",
     "home-assistant-bluetooth>=1.10.0",
     "sensor-state-data>=2.16.0",
+    "pycryptodome>=3.18.0",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
@@ -26,4 +27,5 @@ build-backend = "pdm.backend"
 dev = [
     "black>=23.3.0",
     "ipython>=8.14.0",
+    "pytest>=7.4.0",
 ]
