--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     "${workspaceFolder}/__pypackages__/3.10/lib"
   ],
   "python.testing.pytestArgs": [
-    "enocean_ble"
+    "tests"
   ],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true
